fixed button text sizing issues on mobile after adding signup link

--- a/css/index.css
+++ b/css/index.css
@@ -255,14 +255,17 @@ img {
 button {
   background-color: #3D85C6;
   color: #F6F7F8;
-  padding: 8px 40px;
-  font-size: 1.7rem;
+  padding: 8px 35px;
   border-radius: 8px;
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   right: 15px;
   opacity: 0.8;
   border: none;
+}
+.main-btn a {
+  margin: 0;
+  font-size: 1.8rem;
 }
 .info {
   display: flex;
