--- a/less/home-page.less
+++ b/less/home-page.less
@@ -39,14 +39,18 @@ img{
 button {
     background-color: @button-bkgrnd;
     color: @main-text;
-    padding: 8px 40px;
-    font-size: 1.7rem;
+    padding: 8px 35px;
     border-radius: 8px;
     position: absolute;
-    bottom: 10px;
+    bottom: 20px;
     right: 15px;
     opacity: 0.8;
     border: none;
+}
+
+.main-btn a{
+    margin: 0;
+    font-size: 1.8rem;
 }
 
 .info{
